--- a/src/app/todo-app/todo-app.component.html
+++ b/src/app/todo-app/todo-app.component.html
@@ -1,20 +1,22 @@
 <section class="todoapp">
   <header class="header">
     <h1>Todos</h1>
-    <input class="new-todo" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()">
+    <input class="new-todo" placeholder="What needs to be done?" 
+    autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()">
   </header>
   <section class="main"> 
     <ul class="todo-list">
-      <li *ngFor="let todo of todos | async" [class.completed]="todo.complete">
+      <li *ngFor="let todo of todos" [class.completed]="todo.complete">
         <div class="view">
-          <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" [checked]="todo.complete">
+          <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" 
+          [checked]="todo.complete">
           <label>{{todo.title}}</label>
           <button class="destroy" (click)="deleteTodo(todo.id)"></button>
         </div>
       </li>
     </ul>
   </section>
-  <footer class="footer" *ngIf="todos.length > 0">
-    <span class="todo-count"><strong>{{todos.length}}</strong> {{todos.length == 1 ? 'item' : 'items'}} left</span>
+  <footer class="footer">
   </footer>
 </section>
+
